# DBusLens

./: .gitignore  .pylintrc  AGENTS.md  README.md  pyproject.toml
.github/workflows/: pylint.yml  release.yml
dbuslens/: __init__.py  __main__.py  analyzer.py  bundle.py  cli.py  loading.py  models.py  name_timeline.py  parser.py  pcap_parser.py  plot.py  processes.py  record.py  report_app.py  tui.py
docs/: bustle-session-dbus-report-2026-04-14-10min.md  bustle-system-dbus-report-2026-04-14.md  dblens-format.md  idea.md  report-loading-performance-2026-04-19.md
docs/superpowers/plans/: 2026-04-14-dbuslens-mvp.md  2026-04-14-textual-report-ui.md  2026-04-16-error-analysis-phase-2.md  2026-04-16-name-owner-timeline.md  2026-04-17-pypi-release-packaging.md
docs/superpowers/specs/: 2026-04-14-dbuslens-mvp-design.md  2026-04-14-textual-report-ui-design.md  2026-04-16-error-analysis-phase-2-design.md  2026-04-16-name-owner-timeline-design.md
tests/: test_analyzer.py  test_bundle.py  test_cli.py  test_loading.py  test_name_timeline.py  test_parser.py  test_pcap_parser.py  test_plot.py  test_textual_app.py  test_tui.py
